--- a/todo
+++ b/todo
@@ -1,3 +1,7 @@
+GITHUB
+-Figure out how to host in github pages
+-Solve asset problems, including 
+
 RecipeView
 - More recipes on json to implement scrolling functionality better
 - scroll functionality
