--- a/todo
+++ b/todo
@@ -1,11 +1,12 @@
-- remove margin search button
+
 - ellipsis on mobile
 - add button background
 - add to meal plan bug on recipe view
 - double click . meta tag, user-scalable = no
+
 - add ingredient bug and input visibility
 - meal plan page needs padding at the bottom
-
+expand more svg
 
 GITHUB
 -fix modal verify bug from mealplanview
