few more bug fixes

--- a/todo
+++ b/todo
@@ -6,6 +6,7 @@
 
 - add ingredient bug and input visibility
 - meal plan page needs padding at the bottom
+- groceries smaller size
 expand more svg
 
 GITHUB
