--- a/todo
+++ b/todo
@@ -1,5 +1,5 @@
-Animations, transitions lazy loading
+figure out scroll to top 
+overall qa both on desktop and mobile
 
-Desktop version. create a pseudo iphone with disclaimer at the bottom saying that the app is designed on mobile only at the moment.
 
 cookies
