cookies feature init

--- a/todo
+++ b/todo
@@ -1,5 +1,8 @@
-figure out scroll to top 
+figure out scroll to top on desktop
+
 overall qa both on desktop and mobile
 
 
-cookies
+
+footer z-index. check out when scrolling meal plan 
+
